openshift/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cardconjurer
  name: cardconjurer
spec:
  ports:
  - name: nginx
    port: 8080
    protocol: TCP
    targetPort: 4242
  selector:
    app: cardconjurer
  type: ClusterIP
