openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cardconjurer
  name: cardconjurer
spec:
  port:
    targetPort: nginx
  tls: 
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: cardconjurer
    weight: 100
